--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Index</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <strong><h1>Hello World</h1></strong>
     <hr/>
 </body>
 </html>
